Fix/resize editor (#201)
* avoid show prompt alert in yourwork-grid
* console switch done
* modify footer and shareurl
* fixed console pane resize
* fixed yourwork-grid iframe's scroll bar
* add scrollbar style

--- a/app/javascript/styles/index_editor.css
+++ b/app/javascript/styles/index_editor.css
@@ -1,9 +1,6 @@
 div.consoleClose div.iframeAndConsole div.Pane1{
   height: 100% !important;
 }
-div.consoleOpen div.iframeAndConsole div.Pane1{
-  height: 50% !important;
-}
 .SplitPane-horizontal{
   padding-top: 65px;
 }
